@@ -133,6 +133,8 @@ and Marcelo Vanzin for contributing to this release.
   (bug #2895272 - report and patch from Bernhard Walle).
   doxygen now highlights quoted strings in comments.
 
+- Added url.xml mode (# 1991306 - Kevin Hunter)  
+  
 - Added logtalk.xml mode file (#1945284 - Paulo Moura)
 
 - Added regex.xml mode file (#2782258 - Kevin Hunter)
